syntax = "proto3";

package auth;

option go_package = "MoyStasik.auth.v1;authv1";

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc IdAdmin (AdminRequest) returns (AdminResponse);
}

message RegisterRequest {
    string email = 1;
    string name = 2;
    string password = 3;
}

message RegisterResponse {
    int64 userId = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
    int32 appId = 3;
}

message LoginResponse {
    int64 sessionId = 1;
}

message AdminRequest {
    int64 userId = 1;
}

message AdminResponse {
    bool isAdmin = 1;
}